Scrollbar bug fixed
I fix the scrollbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 11px;
+  height: 0px;
 }
 ::-webkit-scrollbar-track {
   background: #292a2d;
